bug fix (loading z-index)

--- a/css/components/alt-header.css
+++ b/css/components/alt-header.css
@@ -1,5 +1,5 @@
 .alt-header {
-  z-index: 99;
+  z-index: 98;
   background-color: #ffffff;
   left: 0px;
   top: 26px;
