--- a/css/components/mobile.css
+++ b/css/components/mobile.css
@@ -9,7 +9,7 @@
   text-align: center;
   font-weight: 600;
   font-size: 30px;
-  z-index: 100;
+  z-index: 101;
   display: flex;
   justify-content: center;
   align-items: center;
