--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,5 +1,5 @@
 .status-bar {
-  z-index: 100;
+  z-index: 99;
   background-color: #ffffff;
   font-size: 16px;
   font-weight: 600;
